improved graph viz

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "graphology-layout": "^0.6.1",
     "graphology-layout-forceatlas2": "^0.10.1",
     "graphology-layout-noverlap": "^0.4.2",
-    "sigma": "^3.0.2"
+    "sigma": "^3.0.2",
+    "uuid": "^11.1.0"
   },
   "scripts": {
     "build": "bun run build.ts"
